--- a/YellowstonePathology/UI/Surgical/PathologistWorkspace.xaml
+++ b/YellowstonePathology/UI/Surgical/PathologistWorkspace.xaml
@@ -204,7 +204,7 @@
 
 				<ToolBarTray Grid.Column="0" Grid.Row="3">
 					<ToolBar>
-						<Button Name="ButtonStainOrder" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center"
+                        <Button Name="ButtonStainOrder" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Margin="2"
 							HorizontalAlignment="Center" Click="ButtonStainOrder_Click" Background="Gainsboro"
 							IsEnabled="{Binding Path=StainOrderButtonIsEnabled}">
 							<StackPanel Orientation="Horizontal">
@@ -212,7 +212,7 @@
 								<TextBlock Margin="2" VerticalAlignment="Center">Stain Order ...</TextBlock>
 							</StackPanel>
 						</Button>
-						<Button Name="ButtonReportOrder" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center"
+                        <Button Name="ButtonReportOrder" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Margin="2"
 							HorizontalAlignment="Center" Click="ButtonReportOrder_Click" Background="Gainsboro"
 							IsEnabled="{Binding Path=FieldEnabler.IsUnprotectedEnabled}">
 							<StackPanel Orientation="Horizontal">
@@ -220,7 +220,7 @@
 								<TextBlock Margin="2" VerticalAlignment="Center">Report Order ...</TextBlock>
 							</StackPanel>
 						</Button>
-                        <Button Name="ButtonProspectiveReview" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center"
+                        <Button Name="ButtonProspectiveReview" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Margin="2"
 							HorizontalAlignment="Center" Click="ButtonProspectiveReview_Click" Background="Gainsboro"
 							IsEnabled="{Binding Path=FieldEnabler.IsUnprotectedEnabled}">
                             <StackPanel Orientation="Horizontal">
@@ -228,7 +228,7 @@
                                 <TextBlock Margin="2" VerticalAlignment="Center">Prospective Review ...</TextBlock>
                             </StackPanel>
                         </Button>
-                        <Button Name="ButtonMaterialTracking" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center"
+                        <Button Name="ButtonMaterialTracking" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Margin="2"
 							HorizontalAlignment="Center" Click="ButtonMaterialTracking_Click" Background="Gainsboro"
 							IsEnabled="{Binding Path=StainOrderButtonIsEnabled}">
                             <StackPanel Orientation="Horizontal">
@@ -237,11 +237,19 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Name="ButtonStainStatus" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center"
+                        <Button Name="ButtonStainStatus" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Margin="2"
 							HorizontalAlignment="Center" Click="ButtonStainStatus_Click" Background="Gainsboro">
                             <StackPanel Orientation="Horizontal">
                                 <Image Margin="2" Height="16" Source="/UserInterface;component/Resources/Order.ico"></Image>
                                 <TextBlock Margin="2" VerticalAlignment="Center">Stain Status ...</TextBlock>
+                            </StackPanel>
+                        </Button>
+
+                        <Button Name="ButtonStainAssignment" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Margin="2"
+							HorizontalAlignment="Center" Click="ButtonStainAssignment_Click"  Background="Gainsboro">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Margin="2" Height="16" Source="/UserInterface;component/Resources/Order.ico"></Image>
+                                <TextBlock Margin="2" VerticalAlignment="Center">Scan to Assign ...</TextBlock>
                             </StackPanel>
                         </Button>
                     </ToolBar>
